--- a/formulario.html
+++ b/formulario.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KettraWorld</title>
     <link rel="stylesheet" href="https://sebastianjn.github.io/host/home/style.css"> 
-    <meta property="og:site_name" content="KettraWorld">
+    <meta property="og:site_name" content="kettra">
     <meta property="og:title" content="KettraWorld"> 
     <meta property="og:description" content="kettra"> 
     <meta name="theme-color" content=#000> 
@@ -23,14 +23,15 @@
       </div>
     <div class="center">
         <div class="animate__animated animate__jackInTheBox">
-            <h1>ERRO 404</h1></h1> <!--- Server Name -->
-            <p>Esta pagina não foi encontrada! Sorry!</p>
+            <h1>KettraWorld</h1> <!--- Server Name -->
+            <p>agora os jogadores de Kettra World podem fazer os formularios de adimissão para fazer parte da equipe! </p>
             <div class="animate__animated animate__bounceIn animate__delay-1s">
+                <a href="https://forms.gle/7ahh16wXyZHi4DfT6"><button class="btn1"><i class="fas fa-poll"></i> Construtores</button></a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScwt9ZovodcKPI-WZa091DmLtP8GQ1thCtLw0_FGSBYNIm48w/viewform?embedded=true"><button class="btn3"><i class="fas fa-poll"></i> Ajudante</button></a>
             </div>
         </div>
     </div>
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "246b7793a5db407c82a50cb612dd82e4"}'></script>
+ <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "246b7793a5db407c82a50cb612dd82e4"}'></script>
     <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
 </body>
 </html>
-
