--- a/404.html
+++ b/404.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KettraWorld</title>
-    <link rel="stylesheet" href="https://sebastianjn.github.io/host/home/style.css"> 
+    <link rel="stylesheet" href="https://kettraworld.github.io/host/home/style.css"> 
     <meta property="og:site_name" content="KettraWorld">
     <meta property="og:title" content="KettraWorld"> 
     <meta property="og:description" content="kettra"> 
     <meta name="theme-color" content=#000> 
-    <link rel="icon" href="https://sebastianjn.github.io/host/imagens/logo.png"> 
+    <link rel="icon" href="https://kettraworld.github.io/host/imagens/logo.png"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
