--- a/votar.html
+++ b/votar.html
@@ -12,9 +12,9 @@
 
     <title>KettraWorld</title>
     
-    <link rel="stylesheet" href="https://sebastianjn.github.io/host/home/style.css"> 
+    <link rel="stylesheet" href="https://kettraworld.github.io/host/home/style.css"> 
        
-    <link rel="icon" href="https://sebastianjn.github.io/host/imagens/logo.png"> 
+    <link rel="icon" href="https://kettraworld.github.io/host/imagens/logo.png"> 
 
     <meta property="og:site_name" content="kettra">
 
