--- a/bot.html
+++ b/bot.html
@@ -6,21 +6,21 @@
 
   <title>Discord De kettraWorld</title>
 
-    <meta property="og:site_name" content="kettraWorld">
+    <meta property="og:site_name" content="KellyWorld">
 
-    <meta property="og:keywords" content="kettraworld, discord, Kettra World Discord, Kettra entra no discord">
+    <meta property="og:keywords" content="kettraworld">
 
-    <meta property="og:title" content="KettraWorld">
+    <meta property="og:title" content="KellyWorld">
 
     <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
 
-    <meta property="og:description" content="venha conhecer kettra world de perto, entre no nosso discord!">
+    <meta property="og:description" content="me adicione no seu servidor.....">
 
-  <meta http-equiv="refresh" content="0; url=https://discord.gg/NDzFeDp8YE" />
+  <meta http-equiv="refresh" content="0; url=https://sebastianjn.github.io/KellyWorld/" />
 
   <script type="text/javascript">
 
-    window.location.href = "https://discord.gg/NDzFeDp8YE"
+    window.location.href = "https://sebastianjn.github.io/KellyWorld/"
 
   </script>
 
@@ -28,7 +28,7 @@
 
 <body>
 
-  <p><a href="https://discord.gg/NDzFeDp8YE">https://discord.gg/NDzFeDp8YE</a></p>
+  <p><a href="https://sebastianjn.github.io/KellyWorld/">https://sebastianjn.github.io/KellyWorld/</a></p>
 
   <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "246b7793a5db407c82a50cb612dd82e4"}'></script>
 
