novo template de site

--- a/regras.html
+++ b/regras.html
@@ -3,17 +3,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kettra World</title>
+  <title>Kettra Worls</title>
   <link rel="stylesheet" href="src/css/bulma.min.css">
-  <link rel="stylesheet" href="src/css/particle.css">
   <link rel="stylesheet" href="src/css/style.css">
-  <link rel="icon" href="https://kettraworld.github.io/host/imagens/logo.png"> 
+    <link rel="stylesheet" href="src/css/particle.css">
+      <link rel="icon" href="https://kettraworld.github.io/host/imagens/logo.png"> 
 </head>
 
-</div>
-
 <body>
-      <div class="particle particle-1"></div>
+<div class="particle particle-1"></div>
   <div class="particle particle-2"></div>
   <div class="particle particle-3"></div>
   <div class="particle particle-4"></div>
@@ -33,8 +31,7 @@
           <span aria-hidden="true"></span>
         </a>
       </div>
-    
-      <div class="navbar-menu">
+          <div class="navbar-menu">
         <div class="navbar-start">
           <a href="index.html" class="navbar-item"><i class="fas fa-home"></i> Início</a>
           <a href="regras.html" class="navbar-item"><i class="fas fa-book"></i> Regras</a>
@@ -57,23 +54,39 @@
 <main class="section">
   <div class="container">
     <article class="article">
-      <h1 class="article-title"><i class="fas fa-vote-yea"></i> Votar no servidor</h1>
-        <div class="article-thumbnail" style="background-image:url(src/img/votar.png)"></div>
+      <h1 class="article-title"><i class="fas fa-list-ul"></i> Lista de regras</h1>
       <div class="article-content">
         <p>
-         Vote em kettra world para que novas pessoas cheguem nesse extraordinário mundo! O que seria do nosso servidor se não tivesse ninguém jogando nele? Vote para que novas pessoas cheguem para escrever o nosso grande livro, a nossa grande história.
+          <b>Abuso de bugs</b><br>
+          Um bug geralmente é um problema técnico do servidor, a utilização de BUGs podem fornecer vantagem para um determinado jogador, qualquer atitude que possa dar vantagem para somente alguns jogadores é proibido, portanto, é um ato considerado trapaça!
         </p>
-        <a href="https://minecraft-mp.com/server/298656/vote/"><button class="btn9"><i class="fas fa-vote-yea"></i> MMP</button></a>
+      </div>
+    </article>
 
-                <a href="https://topminecraftservers.org/vote/24781"><button class="btn10"><i class="fas fa-vote-yea"></i> TMS</button></a>
-                    <a href="https://mc-server-list.com/server/875-KettraWorld/vote/"><button class="btn11"><i class="fas fa-vote-yea"></i> MSL</button></a>
-                    <a href="https://minecraftservers.org/vote/631131"><button class="btn12"><i class="fas fa-vote-yea"></i> MS</button></a>
-
+    <article class="article">
+      <h1 class="article-title"><i class="fas fa-ban"></i> Tabela de punições</h1>
+      <div class="article-content">
+      <table class="table is-fullwidth is-striped is-bordered is-narrow">
+        <thead>
+            <tr>
+              <th>Infração</th>
+              <th>1ª ocorrência</th>
+              <th>2ª ocorrência</th>
+              <th>3ª ocorrência</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Abuso de bugs</td>
+              <td>Banimento</td>
+              
+            </tr>
+          </tbody>
+        </table>
       </div>
     </article>
   </div>
 </main>
-
 <footer class="section">
   <div class="container">
     <article class="footer">
