--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <li>
                 <img src="http://cravatar.eu/head/Kikasstou/128.png">
                 <h1>Kikasstou</h1>
-                <h2 class="cor-2">Construtor</h2>
+                <h2 class="cor-A2A">Construtor</h2>
               </li>
             </ul>
           </div>
