--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
        <div class="navbar-menu">
           <div class="navbar-start">
-        <a href="index.html" class="navbar-item"><i class="fas fa-home"></i> Início</a>
+        <a href="/" class="navbar-item"><i class="fas fa-home"></i> Início</a>
      <a href="regras.html" class="navbar-item"><i class="fas fa-book"></i> Regras</a>
    <a href="votar.html" class="navbar-item"><i class="fas fa-vote-yea"></i> Votar</a>
      <a href="https://app.kettraworld.repl.co/" target="_blank" class="navbar-item"><i class="fas fa-shopping-cart"></i> Loja</a>
