--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h1 class="article-title"><i class="fas fa-gamepad"></i> 𝕂𝕖𝕥𝕥𝕣𝕒𝕎𝕠𝕣𝕝𝕕</h1>
           <div class="article-thumbnail" style="background-image:url(src/img/miniatura.png)"></div>
           <div class="article-content">
-            <p>Servidor Mine-RPG, focado em sobrevivência, economia, aventura, diversão e muito mais, o servidor se passa em um mundo fictício chamado Kettra onde os players terão que junto dos Deuses e Sábios desvendar seus segredos e salvar seu novo lar, assim, aqueles mais aventureiros podem procurar resolver os mistérios e enigmas, ou simplesmente viver uma vida comum como qualquer camponês, nobre, ou da maneira que achar mais amigável</p>
+            <p>Focado em sobrevivência, economia, aventura, diversão e muito mais, o servidor se passa em um mundo fictício chamado Kettra onde os players terão que junto dos Deuses e Sábios desvendar seus segredos e salvar seu novo lar, assim, aqueles mais aventureiros podem procurar resolver os mistérios e enigmas, ou simplesmente viver uma vida comum como qualquer camponês, nobre, ou da maneira que achar mais amigável</p>
             <ul class="list">
               <li><i class="fas fa-check"></i> Sistema de skills McMMO</li>
               <li><i class="fas fa-check"></i> Sistema de clans</li>
