--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </div>
         </article>
         <article class="article">
-          <h1 class="article-title"><i class="fab fa-twitter"></i> Siga-nos no Twitter</h1>
+          <h1 class="article-title"><i class="fab fa-twitter"></i> Twitter do minecraft!</h1>
           <div class="article-content">
             <a class="twitter-timeline" data-lang="pt" data-height="500" data-theme="light" href="https://twitter.com/Minecraft?ref_src=twsrc%5Etfw">Tweets by Minecraft</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
