--- a/regras.html
+++ b/regras.html
@@ -33,7 +33,7 @@
       </div>
           <div class="navbar-menu">
         <div class="navbar-start">
-          <a href="index.html" class="navbar-item"><i class="fas fa-home"></i> Início</a>
+          <a href="/" class="navbar-item"><i class="fas fa-home"></i> Início</a>
           <a href="regras.html" class="navbar-item"><i class="fas fa-book"></i> Regras</a>
           <a href="votar.html" class="navbar-item"><i class="fas fa-vote-yea"></i> Votar</a>
           <a href="https://app.kettraworld.repl.co/" target="_blank" class="navbar-item"><i class="fas fa-shopping-cart"></i> Loja</a>
@@ -59,6 +59,10 @@
         <p>
           <b>Abuso de bugs</b><br>
           Um bug geralmente é um problema técnico do servidor, a utilização de BUGs podem fornecer vantagem para um determinado jogador, qualquer atitude que possa dar vantagem para somente alguns jogadores é proibido, portanto, é um ato considerado trapaça!
+        </p>
+        <p>
+          <b>AAAAA</b><br>
+          aaaaaaa
         </p>
       </div>
     </article>
