--- a/regras.html
+++ b/regras.html
@@ -59,11 +59,9 @@
         <p>
           <b>Abuso de bugs</b><br>
           Um bug geralmente é um problema técnico do servidor, a utilização de BUGs podem fornecer vantagem para um determinado jogador, qualquer atitude que possa dar vantagem para somente alguns jogadores é proibido, portanto, é um ato considerado trapaça!
-        </p>
-        <p>
-         </br>
-          <b>AAAAA</b><br>
-          aaaaaaa
+          <br><br>
+          <b>TESTE</b><br>
+          teste
         </p>
       </div>
     </article>
