--- a/regras.html
+++ b/regras.html
@@ -60,8 +60,8 @@
           <b>Abuso de bugs</b><br>
           Um bug geralmente é um problema técnico do servidor, a utilização de BUGs podem fornecer vantagem para um determinado jogador, qualquer atitude que possa dar vantagem para somente alguns jogadores é proibido, portanto, é um ato considerado trapaça!
           <br><br>
-          <b>TESTE</b><br>
-          teste
+          <b>Anti-Jogo de modo Geral</b><br>
+          É considerado anti-jogo qualquer atitude que desestabilize a harmonia do servidor ou o convívio e relacionamento entre os players. As práticas mais comuns de anti-jogo são, por exemplo, homes de armadilhas (trap) com finalidade exclusiva de matar um player e se apossar de seus itens, vender um item e entregar outro, etc. Essas práticas não são toleradas em nossos servidores e, se devidamente comprovadas, ocasionam a punição do seu responsável.
         </p>
       </div>
     </article>
