--- a/regras.html
+++ b/regras.html
@@ -82,7 +82,12 @@
             <tr>
               <td>Abuso de bugs</td>
               <td>Banimento</td>
-              
+            </tr>
+            <tr>
+              <td>Anti-Jogo de modo Geral<</td>
+              <td>Mute de 2 horas</td>
+              <td>Mute de 24 horas</td>
+              <td>Mute de 72 horas</td>
             </tr>
           </tbody>
         </table>
