--- a/regras.html
+++ b/regras.html
@@ -84,7 +84,7 @@
               <td>Banimento</td>
             </tr>
             <tr>
-              <td>Anti-Jogo de modo Geral<</td>
+              <td>Anti-Jogo de modo Geral</td>
               <td>Mute de 2 horas</td>
               <td>Mute de 24 horas</td>
               <td>Mute de 72 horas</td>
