--- a/regras.html
+++ b/regras.html
@@ -57,6 +57,9 @@
       <h1 class="article-title"><i class="fas fa-list-ul"></i> Lista de regras</h1>
       <div class="article-content">
         <p>
+          <b>Ofensa a Staff</b><br>
+          Ofensas a staff não serão admitidas. Se o player tem algo a reclamar! é so se dirigir ao um staff mas nunca ofender ou diminuir o trabalho deles 
+          <br><br>
           <b>Abuso de bugs</b><br>
           Um bug geralmente é um problema técnico do servidor, a utilização de BUGs podem fornecer vantagem para um determinado jogador, qualquer atitude que possa dar vantagem para somente alguns jogadores é proibido, portanto, é um ato considerado trapaça!
           <br><br>
