--- a/regras.html
+++ b/regras.html
@@ -82,6 +82,12 @@
             </tr>
           </thead>
           <tbody>
+             <tr>
+              <td>Ofensa a Staff</td>
+              <td>Mute de 2 horas</td>
+              <td>expusão</td>
+              <td>banimento por 72 horas</td>
+            </tr>
             <tr>
               <td>Abuso de bugs</td>
               <td>Banimento</td>
