--- a/regras.html
+++ b/regras.html
@@ -58,7 +58,7 @@
       <div class="article-content">
         <p>
           <b>Griefing</b><br>
-          
+          O ato de Griefing é comparado com o vandalismo e assim como na vida real, também é proibido. Existem várias formas de cometer Griefing, todas são motivo de punição!
           <br><br>
           <b>Ofensa a Staff</b><br>
           Ofensas a staff não serão admitidas. Se o player tem algo a reclamar! é so se dirigir ao um staff mas nunca ofender ou diminuir o trabalho deles 
