--- a/regras.html
+++ b/regras.html
@@ -86,6 +86,11 @@
           </thead>
           <tbody>
              <tr>
+              <td>Griefing</td>
+              <td>expusão</td>
+              <td>banimento por 48 horas</td>
+            </tr>
+             <tr>
               <td>Ofensa a Staff</td>
               <td>Mute de 2 horas</td>
               <td>expusão</td>
