--- a/regras.html
+++ b/regras.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kettra Worls</title>
+  <title>Kettra World</title>
   <link rel="stylesheet" href="src/css/bulma.min.css">
   <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/particle.css">
