--- a/regras.html
+++ b/regras.html
@@ -55,6 +55,7 @@
   <div class="container">
     <article class="article">
       <h1 class="article-title"><i class="fas fa-list-ul"></i> Lista de regras</h1>
+       <div class="article-thumbnail" style="background-image:url(src/img/regras.png)"></div>
       <div class="article-content">
         <p>
           <b>Griefing</b><br>
