--- a/votar.html
+++ b/votar.html
@@ -63,6 +63,8 @@
     <a href="https://mc-server-list.com/server/875-KettraWorld/vote/"><button class="btn3"><i class="fas fa-vote-yea"></i> MSL</button></a>
                   
     <a href="https://minecraftservers.org/vote/631131"><button class="btn4"><i class="fas fa-vote-yea"></i> MS</button></a>
+    
+      <a href="https://topg.org/minecraft-servers/server-641891"><button class="btn5"><i class="fas fa-vote-yea"></i> TOP G</button></a>
                  </div>
             </article>
          </div>
