--- a/regras.html
+++ b/regras.html
@@ -88,14 +88,11 @@
           <tbody>
              <tr>
               <td>Griefing</td>
-              <td>expusão</td>
-              <td>banimento por 48 horas</td>
+              <td>banimento</td>
             </tr>
              <tr>
               <td>Ofensa a Staff</td>
-              <td>Mute de 2 horas</td>
-              <td>expusão</td>
-              <td>banimento por 72 horas</td>
+              <td>Banimento por 72 horas</td>
             </tr>
             <tr>
               <td>Abuso de bugs</td>
