--- a/regras.html
+++ b/regras.html
@@ -59,13 +59,13 @@
       <div class="article-content">
         <p>
           <b>Griefing</b><br>
-          O ato de Griefing é comparado com o vandalismo e assim como na vida real, também é proibido. Existem várias formas de cometer Griefing, todas são motivo de punição!
+          O ato de Griefing é comparado com o vandalismo e assim como na vida real, também é proibido.
           <br><br>
           <b>Ofensa a Staff</b><br>
-          Ofensas a staff não serão admitidas. Se o player tem algo a reclamar! é so se dirigir ao um staff mas nunca ofender ou diminuir o trabalho deles 
+          Ofensas a staff não serão admitidas. Se o player tem algo a reclamar! é so se dirigir ao um staff mas nunca ofender ou diminuir o trabalho deles.
           <br><br>
           <b>Abuso de bugs</b><br>
-          Um bug geralmente é um problema técnico do servidor, a utilização de BUGs podem fornecer vantagem para um determinado jogador, qualquer atitude que possa dar vantagem para somente alguns jogadores é proibido, portanto, é um ato considerado trapaça!
+          Um bug geralmente é um problema técnico do servidor, a utilização de "bugs" podem fornecer vantagem para um determinado jogador, qualquer atitude que possa dar vantagem para somente alguns jogadores é proibido, portanto, é um ato considerado trapaça!
           <br><br>
           <b>Anti-Jogo</b><br>
           Anti-jogo é fazer algo que o jogo não incentiva ou que vá contra o ideal do jogo!
@@ -82,7 +82,6 @@
               <th>Infração</th>
               <th>1ª ocorrência</th>
               <th>2ª ocorrência</th>
-              <th>3ª ocorrência</th>
             </tr>
           </thead>
           <tbody>
@@ -101,8 +100,7 @@
             <tr>
               <td>Anti-Jogo</td>
               <td>Mute de 2 horas</td>
-              <td>Mute de 24 horas</td>
-              <td>Mute de 72 horas</td>
+              <td>banimento por 128 horas!</td>
             </tr>
           </tbody>
         </table>
