--- a/votar.html
+++ b/votar.html
@@ -75,7 +75,7 @@
   <div class="container">
     <article class="footer">
       <span>Kettra World <script>document.write(new Date().getFullYear())</script> &copy; Todos os direitos reservados.</span>
-      <a href="https://github.com/sebastianjn" target="_blank" class="is-muted"><i class="fas fa-tools"></i> Desenvolvido por sebastianjn007</a>
+      <a href="https://github.com/sebastianjnuwu" target="_blank" class="is-muted"><i class="fas fa-tools"></i> Desenvolvido por sebastianjn007</a>
      </article>
   </div>
 </footer>
