--- a/index.html
+++ b/index.html
@@ -76,14 +76,12 @@
                 <h2 class="cor-ABC">Semi-deusa</h2>
               </li>
               <li>
-                  <!----
                   <img src="http://cravatar.eu/head/eimine/128.png">
                 <h1>_Sebastianjn007</h1>
                 <h2 class="cor-ABC">Semi-deus</h2>
               </li>
               <li>
-              --->
-                <img src="http://cravatar.eu/head/loli/128.png">
+                <img src="http://cravatar.eu/head/stinkysapark/128.png">
                 <h1>_AneMiyuki</h1>
                 <h2 class="cor-ABC">Semi-deusa</h2>
               </li>
