--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <h2 class="cor-ABC">Semi-deus</h2>
               </li>
               <li>
-                <img src="http://cravatar.eu/head/stinkysapark/128.png">
+                <img src="http://cravatar.eu/head/kahlani180/128.png">
                 <h1>_AneMiyuki</h1>
                 <h2 class="cor-ABC">Semi-deusa</h2>
               </li>
