--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="article-content">
             <ul class="equipe">
               <li>
-                <img src="http://cravatar.eu/head/Belly/128.png">
+                <img src="http://cravatar.eu/head/Monday/128.png">
                 <h1>Belly</h1>
                 <h2 class="cor-ABC">Semi-deusa</h2>
               </li>
