--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <h2 class="cor-ABC">Semi-deusa</h2>
               </li>
               <li>
-                  <img src="http://cravatar.eu/head/kkkiiillleeerrr/128.png">
+                  <img src="http://cravatar.eu/head/fnafak3000/128.png">
                 <h1>_Sebastianjn007</h1>
                 <h2 class="cor-ABC">Semi-deus</h2>
               </li>
