--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
                 <img src="http://cravatar.eu/head/Breysk/128.png">
                 <h1>Breysk</h1>
                 <h2 class="cor-CBA">Arcanjo</h2>
+               </li>
+               <li>
+                <img src="http://cravatar.eu/head/secundos/128.png">
+                <h1>Kikasstou</h1>
+                <h2 class="cor-CBC">Construtor</h2>
+              </li>
             </ul>
           </div>
         </article>
