--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <h2 class="cor-CBA">Arcanjo</h2>
                </li>
                <li>
-                <img src="http://cravatar.eu/head/secundos/128.png">
+                <img src="http://cravatar.eu/head/Segundos/128.png">
                 <h1>Kikasstou</h1>
                 <h2 class="cor-CBC">Construtor</h2>
               </li>
