--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                <li>
                 <img src="http://cravatar.eu/head/Segundos/128.png">
                 <h1>Kikasstou</h1>
-                <h2 class="cor-CBC">Construtor</h2>
+                <h2 class="cor-CBA">Construtor</h2>
               </li>
             </ul>
           </div>
