--- a/login.html
+++ b/login.html
@@ -1,1 +1,19 @@
-a
+<!DOCTYPE html>
+<html>
+<head>
+  <title>kettraWorld login</title>
+    <meta property="og:site_name" content="kettraWorld">
+    <meta property="og:keywords" content="kettraworld, discord, Kettra World Discord, Kettra entra no discord">
+    <meta property="og:title" content="KettraWorld">
+    <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
+    <meta property="og:description" content="Entre em nosso site!!">
+  <meta http-equiv="refresh" content="0; url=https://site.kettraworld.repl.co/login.php" />
+  <script type="text/javascript">
+    window.location.href = "https://site.kettraworld.repl.co/login.php"
+  </script>
+</head>
+<body>
+  <p><a href="https://site.kettraworld.repl.co/login.php">https://site.kettraworld.repl.co/login.php</a></p>
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "246b7793a5db407c82a50cb612dd82e4"}'></script>
+</body>
+</html>
