--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="container">
        <article class="footer">
           <span>Kettra World <script>document.write(new Date().getFullYear())</script> &copy; Todos os direitos reservados.</span>
-              <a href="https://github.com/sebastianjnuwu" target="_blank" class="is-muted"><i class="fas fa-tools"></i> Desenvolvido por sebastianjn007</a>
+              <a href="https://github.com/sebastianjnuwu" target="_blank" class="is-muted"><i class="fas fa-tools"></i> Desenvolvido por sebastianjnuwu</a>
              </article>
         </div>
     </footer>
