--- a/regras.html
+++ b/regras.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="src/css/particle.css">
       <link rel="icon" href="https://kettraworld.github.io/host/imagens/logo.png"> 
 </head>
-
 <body>
 <div class="particle particle-1"></div>
   <div class="particle particle-2"></div>
@@ -112,7 +111,7 @@
   <div class="container">
     <article class="footer">
       <span>Kettra World <script>document.write(new Date().getFullYear())</script> &copy; Todos os direitos reservados.</span>
-      <a href="https://github.com/sebastianjnuwu" target="_blank" class="is-muted"><i class="fas fa-tools"></i> Desenvolvido por sebastianjn007</a>
+      <a href="https://github.com/sebastianjnuwu" target="_blank" class="is-muted"><i class="fas fa-tools"></i> Desenvolvido por sebastianjnuwu</a>
     </article>
   </div>
      </footer>
