--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="article-thumbnail" style="background-image:url(src/img/miniatura.png)"></div>
           <div class="article-content">
  <b>O que é Kettra World?</b></br>
- <p>✧ Um mundo forjado das mãos de um Deus superior, um ser perfeito em todos os aspectos da criação, o senhor que nos primórdios, com suas próprias mãos e manipulações de neveis imensuráveis fez surgir do vazio o mundo batizado de Koramund e dele fez o lar de suas criações, desde simples minusculas formas de vida ate os conhecidos humanos.
+</br><p>✧ Um mundo forjado das mãos de um Deus superior, um ser perfeito em todos os aspectos da criação, o senhor que nos primórdios, com suas próprias mãos e manipulações de neveis imensuráveis fez surgir do vazio o mundo batizado de Koramund e dele fez o lar de suas criações, desde simples minusculas formas de vida ate os conhecidos humanos.
  </br>
 </br>✧ E para ficar perto de sua criação ele transformou de si, uma magnífica entidade em seres que conhecemos hoje como Deuses, ele fez de si e de suas emoções dezoito entidades e cada uma ficou responsável por uma das grandes dezoito nações e assim foi dado início a era sagrada onde deuses e humanos coexistiram em um mesmo plano em harmonia.
 </br>
