--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1">
        <title>Kettra World</title>
-      <link rel="stylesheet" href="src/css/bulma.min.css">
-    <link rel="stylesheet" href="src/css/particle.css">
-   <link rel="stylesheet" href="src/css/style.css">
+      <link rel="stylesheet" href="https://kettraworld.github.io/src/css/bulma.min.css">
+    <link rel="stylesheet" href="https://kettraworld.github.io/src/css/particle.css">
+   <link rel="stylesheet" href="https://kettraworld.github.io/src/css/style.css">
 <link rel="icon" href="https://kettraworld.github.io/host/imagens/logo.png"> 
  </head>
   </div>
