--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <header class="section">
        <div class="logo container">
         <a href="index.html">
-      <img src="src/img/logo.png">
+      <img src="https://kettraworld.github.io/src/img/logo.png">
     </a>
   </div>
    <div class="container">
@@ -63,6 +63,8 @@
 </br>
 </br>✧ E tudo ocorreu como a vontade do criador, no entanto, a natureza humana aflorou e em alguns deuses um sentimento profano e desse sentimento o repúdio por uma espécie que antes devia ser protegida por sua inexperiência.
 </p>
+</br>
+
           </div>
         </article>
 
