--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </br>✧ E tudo ocorreu como a vontade do criador, no entanto, a natureza humana aflorou e em alguns deuses um sentimento profano e desse sentimento o repúdio por uma espécie que antes devia ser protegida por sua inexperiência.
 </p>
 </br>
-<a href='https://www.instagram.com/kettraworld'><button class=''><i class='fa fa-instagram'></i></button></a>
+<a href='https://www.instagram.com/kettraworld'><i class='fa fa-instagram'></i></a>
           </div>
         </article>
 
