--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1">
        <title>Kettra World</title>
-       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://kettraworld.github.io/src/css/bulma.min.css">
     <link rel="stylesheet" href="https://kettraworld.github.io/src/css/particle.css">
    <link rel="stylesheet" href="https://kettraworld.github.io/src/css/style.css">
@@ -65,7 +64,7 @@
 </br>✧ E tudo ocorreu como a vontade do criador, no entanto, a natureza humana aflorou e em alguns deuses um sentimento profano e desse sentimento o repúdio por uma espécie que antes devia ser protegida por sua inexperiência.
 </p>
 </br>
-<a href='https://www.instagram.com/kettraworld'><i class='btn btn-dark'></i></a>
+<a href='https://www.instagram.com/kettraworld'><i class='btn btn-dark'></i>Instagram</a>
           </div>
         </article>
         <article class="article">
