--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
     </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="src/js/scripts.js"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.12.1/js/all.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js"></script>
  </body>
 </html>
