--- a/index.html
+++ b/index.html
@@ -129,5 +129,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="src/js/scripts.js"></script>
   <script src="https://use.fontawesome.com/releases/v5.12.1/js/all.js"></script>
+  <script src="https://minecraft-mp.com/embed.js?id=298656&type=votes&size=normal"></script>
  </body>
 </html>
