--- a/404.html
+++ b/404.html
@@ -1,36 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-br"> 
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KettraWorld</title>
-    <link rel="stylesheet" href="https://kettraworld.github.io/host/home/style.css"> 
-    <meta property="og:site_name" content="KettraWorld">
-    <meta property="og:title" content="KettraWorld"> 
-    <meta property="og:description" content="kettra"> 
-    <meta name="theme-color" content=#000> 
-    <link rel="icon" href="https://kettraworld.github.io/host/imagens/logo.png"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>kettraWorld</title>
+    <meta property="og:site_name" content="kettraWorld">
+    <meta property="og:keywords" content="kettraworld, discord, Kettra World Discord, Kettra entra no discord">
+    <meta property="og:title" content="KettraWorld">
+    <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
+    <meta property="og:description" content="venha conhecer kettra world de perto, entre no nosso discord!">
+  <meta http-equiv="refresh" content="0; url=https://app.kettraworld.repl.co/" />
+  <script type="text/javascript">
+    window.location.href = "https://app.kettraworld.repl.co/"
+  </script>
 </head>
 <body>
-    <div class="bg"></div>
-    <div class="animation-wrapper">
-        <div class="particle particle-1"></div> 
-        <div class="particle particle-2"></div>
-        <div class="particle particle-3"></div>
-        <div class="particle particle-4"></div>
-      </div>
-    <div class="center">
-        <div class="animate__animated animate__jackInTheBox">
-            <h1>ERRO 404</h1></h1> <!--- Server Name -->
-            <p>Esta pagina não foi encontrada! Sorry!</p>
-            <div class="animate__animated animate__bounceIn animate__delay-1s">
-            </div>
-        </div>
-    </div>
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "246b7793a5db407c82a50cb612dd82e4"}'></script>
-    <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
+  <p><a href="https://app.kettraworld.repl.co/">https://app.kettraworld.repl.co/</a></p>
 </body>
 </html>
-
