--- a/reddit.html
+++ b/reddit.html
@@ -1,35 +1,17 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-
-  <title>Kettra World - Loja de Kettra</title>
-
+  <title>Kettra World - Reddit</title>
     <meta property="og:site_name" content="kettraWorld">
-
-    <meta property="og:keywords" content="kettraworld, discord, Kettra World Discord, Kettra entra no discord">
-
+    <meta property="og:keywords" content="reedit">
     <meta property="og:title" content="KettraWorld">
-
     <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
-
-    <meta property="og:description" content="Anjo mandou avisar para ficar de olho na loja de Kettra!">
-
-  <meta http-equiv="refresh" content="0; url=https://app.kettraworld.repl.co/loja.php" />
-
+  <meta http-equiv="refresh" content="0; url=https://www.reddit.com/r/kettraworld" />
   <script type="text/javascript">
-
-    window.location.href = "https://app.kettraworld.repl.co/loja.php"
-
+    window.location.href = "https://www.reddit.com/r/kettraworld"
   </script>
-
 </head>
-
 <body>
-
-  <p><a href="https://app.kettraworld.repl.co/loja.php">https://app.kettraworld.repl.co/loja.php</a></p>
-
+  <p><a href="https://www.reddit.com/r/kettraworld">https://www.reddit.com/r/kettraworld</a></p>
 </body>
-
 </html>
