--- a/loja.html
+++ b/loja.html
@@ -7,12 +7,12 @@
     <meta property="og:title" content="KettraWorld">
     <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
     <meta property="og:description" content="Anjo mandou avisar para ficar de olho na loja de Kettra!">
-  <meta http-equiv="refresh" content="0; url=https://app.kettraworld.repl.co/loja.php" />
+  <meta http-equiv="refresh" content="0; url=https://kettra.herokuapp.com/loja.php" />
   <script type="text/javascript">
-    window.location.href = "https://app.kettraworld.repl.co/loja.php"
+    window.location.href = "https://kettra.herokuapp.com/loja.php"
   </script>
 </head>
 <body>
-  <p><a href="https://app.kettraworld.repl.co/loja.php">https://app.kettraworld.repl.co/loja.php</a></p>
+  <p><a href="https://kettra.herokuapp.com/loja.php">https://kettra.herokuapp.com/loja.php</a></p>
 </body>
 </html>
