--- a/404.html
+++ b/404.html
@@ -7,12 +7,12 @@
     <meta property="og:title" content="KettraWorld">
     <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
     <meta property="og:description" content="venha conhecer kettra world de perto, entre no nosso discord!">
-  <meta http-equiv="refresh" content="0; url=https://app.kettraworld.repl.co/" />
+  <meta http-equiv="refresh" content="0; url=https://kettra.herokuapp.com/" />
   <script type="text/javascript">
-    window.location.href = "https://app.kettraworld.repl.co/"
+    window.location.href = "https://kettra.herokuapp.com/"
   </script>
 </head>
 <body>
-  <p><a href="https://app.kettraworld.repl.co/">https://app.kettraworld.repl.co/</a></p>
+  <p><a href="https://kettra.herokuapp.com/">https://kettra.herokuapp.com/</a></p>
 </body>
 </html>
