updating the word letter site to static page and connecting to the store's web server!

--- a/instagram.html
+++ b/instagram.html
@@ -5,7 +5,7 @@
     <meta property="og:site_name" content="kettraWorld">
     <meta property="og:keywords" content="instagram">
     <meta property="og:title" content="KettraWorld">
-    <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
+    <link rel="icon" href="src/imagens/logo.png"> 
   <meta http-equiv="refresh" content="0; url=https://www.instagram.com/kettraworld/" />
   <script type="text/javascript">
     window.location.href = "https://www.instagram.com/kettraworld/"
