--- a/404.html
+++ b/404.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
-<head>
+ <html>
+  <head>
   <title>kettraWorld</title>
     <meta property="og:site_name" content="kettraWorld">
-    <meta property="og:keywords" content="kettraworld, discord, Kettra World Discord, Kettra entra no discord">
+    <meta property="og:keywords" content="kettraworld, discord, Kettra World Discord, servidor, Kettra entra no discord">
     <meta property="og:title" content="KettraWorld">
-    <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
+    <link rel="icon" href="src/imagens/logo.png"> 
     <meta property="og:description" content="venha conhecer kettra world de perto, entre no nosso discord!">
-  <meta http-equiv="refresh" content="0; url=https://kettra.herokuapp.com/" />
+  <meta http-equiv="refresh" content="0; url=https://kettraworld.github.io/" />
   <script type="text/javascript">
-    window.location.href = "https://kettra.herokuapp.com/"
+    window.location.href = "https://kettraworld.github.io/"
   </script>
 </head>
 <body>
-  <p><a href="https://kettra.herokuapp.com/">https://kettra.herokuapp.com/</a></p>
+  <p><a href="">https://kettraworld.github.io/</a></p>
 </body>
 </html>
