--- a/discord.html
+++ b/discord.html
@@ -5,7 +5,7 @@
     <meta property="og:site_name" content="kettraWorld">
     <meta property="og:keywords" content="kettraworld, discord, Kettra World Discord, Kettra entra no discord">
     <meta property="og:title" content="KettraWorld">
-    <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
+    <link rel="icon" href="src/imagens/logo.png"> 
     <meta property="og:description" content="venha conhecer kettra world de perto, entre no nosso discord!">
   <meta http-equiv="refresh" content="0; url=https://discord.gg/NDzFeDp8YE" />
   <script type="text/javascript">
