--- a/loja.html
+++ b/loja.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Kettra World - Loja de Kettra</title>
+    <meta property="og:site_name" content="kettraWorld">
+    <meta property="og:keywords" content="kettraworld, discord, Kettra World Discord, Kettra entra no discord">
+    <meta property="og:title" content="KettraWorld">
+    <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
+    <meta property="og:description" content="Anjo mandou avisar para ficar de olho na loja de Kettra!">
+  <meta http-equiv="refresh" content="0; url=https://kettra.herokuapp.com" />
+  <script type="text/javascript">
+    window.location.href = "https://kettra.herokuapp.com"
+  </script>
+</head>
+<body>
+  <p><a href="https://kettra.herokuapp.com">https://kettra.herokuapp.com</a></p>
+</body>
+</html>
