--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               </li>
               <li>
                   <img src="http://cravatar.eu/head/eimine/128.png">
-                <h1>_Sebastianjn007</h1>
+                <h1>_SebastianJn</h1>
                 <h2 class="COR-A">Semi-deus</h2>
               </li>
               <li>
