--- a/index.html
+++ b/index.html
@@ -56,11 +56,7 @@
           <div class="article-thumbnail" style="background-image:url(src/imagens/home.png)"></div>
           <div class="article-content">
  <b>Kettra World</b><br>
-<br><p>✧ Um mundo forjado das mãos de um Deus superior, um ser perfeito em todos os aspectos da criação, o senhor que nos primórdios, com suas próprias mãos e manipulações de neveis imensuráveis fez surgir do vazio o mundo batizado de Koramund e dele fez o lar de suas criações, desde simples minusculas formas de vida ate os conhecidos humanos.
-<br>
-<br>✧ E para ficar perto de sua criação ele transformou de si, uma magnífica entidade em seres que conhecemos hoje como Deuses, ele fez de si e de suas emoções dezoito entidades e cada uma ficou responsável por uma das grandes dezoito nações e assim foi dado início a era sagrada onde deuses e humanos coexistiram em um mesmo plano em harmonia.
-<br>
-<br>✧ E tudo ocorreu como a vontade do criador, no entanto, a natureza humana aflorou e em alguns deuses um sentimento profano e desse sentimento o repúdio por uma espécie que antes devia ser protegida por sua inexperiência.
+<br><p> ✧ Servidor rpg focado em sobrevivência, economia, aventura, diversão e muito mais, o servidor se passa em um mundo fictício chamado Kettra onde os players terão que junto dos Deuses e Sábios desvendar seus segredos e salvar seu novo lar, assim, aqueles mais aventureiros podem procurar resolver os mistérios e enigmas, ou simplesmente viver uma vida comum como qualquer camponês, nobre, ou da maneira que achar mais amigável.
 </p>
 <br>
           </div>
