--- a/votar.html
+++ b/votar.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="src/css/style.css">
   <link rel="icon" href="https://i.imgur.com/Iw2qyZZ.png">
             </head>
-          </div>
        <body>
     <div class="particle particle-1"></div>
      <div class="particle particle-2"></div>
@@ -33,7 +32,7 @@
           <a href="/" class="navbar-item"><i class="fas fa-home"></i> Início</a>
           <a href="regras.php" class="navbar-item"><i class="fas fa-book"></i> Regras</a>
           <a href="votar.php" class="navbar-item"><i class="fas fa-vote-yea"></i> Votar</a>
-          <a href="" target="_blank" class="navbar-item"><i class="fas fa-shopping-cart"></i> Loja</a>
+          <a href="https://kettra.herokuapp.com" target="_blank" class="navbar-item"><i class="fas fa-shopping-cart"></i> Loja</a>
           <a href="https://kettraworld.github.io/discord" target="_blank" class="navbar-item"><i class="fab fa-discord"></i> Discord</a>
         </div>
       <div class="navbar-end">
