--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html>
   <head>
-  <title>kettraWorld</title>
+  <title>kettraWorld - 404</title>
     <meta property="og:site_name" content="kettraWorld">
     <meta property="og:keywords" content="kettraworld, discord, Kettra World Discord, servidor, Kettra entra no discord">
     <meta property="og:title" content="KettraWorld">
