--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
                 <h1>Kikasstou</h1>
                 <h2 class="COR-F">Construtor</h2>
               </li>
+                             <li>
+                <img src="http://cravatar.eu/head/Giiunny/128.png">
+                <h1>Giiunny</h1>
+                <h2 class="COR-E">Anjo da guarda</h2>
+              </li>
             </ul>
           </div>
         </article>
