--- a/construtor.html
+++ b/construtor.html
@@ -4,15 +4,15 @@
   <title>Kettra World - Formulário</title>
     <meta property="og:title" content="KettraWorld">
     <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
-   <meta property="og:description" content=" ＼(◎o◎)／ formulário para ser ajudante">
- <meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLScwt9ZovodcKPI-WZa091DmLtP8GQ1thCtLw0_FGSBYNIm48w/viewform" />
+   <meta property="og:description" content=" ＼(◎o◎)／ formulário para ser construtor">
+ <meta http-equiv="refresh" content="0; url=https://forms.gle/7ahh16wXyZHi4DfT6" />
   <script type="text/javascript">
-    window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScwt9ZovodcKPI-WZa091DmLtP8GQ1thCtLw0_FGSBYNIm48w/viewform"
+    window.location.href = "https://forms.gle/7ahh16wXyZHi4DfT6"
   </script>
 </head>
 <body>
   <p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLScwt9ZovodcKPI-WZa091DmLtP8GQ1thCtLw0_FGSBYNIm48w/viewform">https://docs.google.com/forms/d/e/1FAIpQLScwt9ZovodcKPI-WZa091DmLtP8GQ1thCtLw0_FGSBYNIm48w/viewform</a>
+    <a href="https://forms.gle/7ahh16wXyZHi4DfT6">https://forms.gle/7ahh16wXyZHi4DfT6</a>
     </p>
 </body>
 </html>
