--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="column">
         <article class="article">
           <h1 class="article-title"><i class="fas fa-gamepad"></i> <b>Kettra World</b></h1>
-          <div class="article-thumbnail" style="background-image:url(src/imagens/home.png)"></div>
+          <div class="article-thumbnail" style="background-image:url(https://media.discordapp.net/attachments/978225247356592158/997622087697051729/2022-07-15_18.46.55.png)"></div>
           <div class="article-content">
  <b>Kettra World</b><br>
 <br><p> ✧ Servidor rpg focado em sobrevivência, economia, aventura, diversão e muito mais, o servidor se passa em um mundo fictício chamado Kettra onde os players terão que junto dos Deuses e Sábios desvendar seus segredos e salvar seu novo lar, assim, aqueles mais aventureiros podem procurar resolver os mistérios e enigmas, ou simplesmente viver uma vida comum como qualquer camponês, nobre, ou da maneira que achar mais amigável.
