--- a/loja.html
+++ b/loja.html
@@ -7,12 +7,12 @@
     <meta property="og:title" content="KettraWorld">
     <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
     <meta property="og:description" content="Anjo mandou avisar para ficar de olho na loja de Kettra!">
-  <meta http-equiv="refresh" content="0; url=http://kettraworld.ddns.net/store.php" />
+  <meta http-equiv="refresh" content="0; url=https://kettra.herokuapp.com/store.php" />
   <script type="text/javascript">
-    window.location.href = "http://kettraworld.ddns.net/store.php"
+    window.location.href = "https://kettra.herokuapp.com/store.php"
   </script>
 </head>
 <body>
-  <p><a href="http://kettraworld.ddns.net/store.php">http://kettraworld.ddns.net/store.php</a></p>
+  <p><a href="https://kettra.herokuapp.com/store.php">https://kettra.herokuapp.com/store.php</a></p>
 </body>
 </html>
