--- a/404.html
+++ b/404.html
@@ -7,12 +7,12 @@
     <meta property="og:title" content="KettraWorld">
     <link rel="icon" href="src/imagens/logo.png"> 
     <meta property="og:description" content="venha conhecer kettra world de perto, entre no nosso discord!">
-  <meta http-equiv="refresh" content="0; url=https://kettra.herokuapp.com/" />
+  <meta http-equiv="refresh" content="0; url=http://kettraworld.ddns.net/" />
   <script type="text/javascript">
-    window.location.href = "https://kettra.herokuapp.com/"
+    window.location.href = "http://kettraworld.ddns.net/"
   </script>
 </head>
 <body>
-  <p><a href="">https://kettra.herokuapp.com/</a></p>
+  <p><a href="">http://kettraworld.ddns.net/</a></p>
 </body>
 </html>
