--- a/loja.html
+++ b/loja.html
@@ -6,7 +6,7 @@
     <meta property="og:keywords" content="kettraworld, discord, Kettra World Discord, Kettra entra no discord">
     <meta property="og:title" content="KettraWorld">
     <link rel="icon" href="https://kettraworld.github.io/css/fotos/logo.png"> 
-    <meta property="og:description" content="Anjo mandou avisar para ficar de olho na loja de Kettra!">
+    <meta property="og:description" content="✧ um anjo disse para os seres que a maior riqueza se encontra aqui ✧">
   <meta http-equiv="refresh" content="0; url=https://kettra.herokuapp.com/store.php" />
   <script type="text/javascript">
     window.location.href = "https://kettra.herokuapp.com/store.php"
